# ZettaLogger

./: CMakeLists.txt  README.md  databaseconnection.cpp  databaseconnection.h  db_setup.sql  dbcon.cpp  dbcon.h  httpserver.cpp  httpserver.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  record.h  zettalistenerconnection.cpp  zettalistenerconnection.h
Tests/mainwindow.tests/: CMakeLists.txt  main.cpp  mainwindow.tests.h
